--- a/uwaterloo-locator/package.json
+++ b/uwaterloo-locator/package.json
@@ -9,23 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.1",
     "eslint": "^9.1.1",
-    "expo": "~50.0.17",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.2",
+    "expo-status-bar": "~1.12.1",
     "prettier": "^3.2.5",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-maps": "1.10.0",
-    "react-native-svg": "14.1.0"
+    "react-native": "0.74.1",
+    "react-native-maps": "1.14.0",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.1.1",
     "@react-native/metro-config": "^0.74.81",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
     "globals": "^15.1.0",
     "react-native-svg-transformer": "^1.3.0",
-    "typescript": "^5.1.3",
+    "typescript": "~5.3.3",
     "typescript-eslint": "^7.8.0"
   },
   "private": true
