--- a/uwaterloo-locator/package.json
+++ b/uwaterloo-locator/package.json
@@ -4,14 +4,15 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.1",
     "eslint": "^9.1.1",
     "expo": "^51.0.8",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "prettier": "^3.2.5",
     "react": "18.2.0",
