--- a/uwaterloo-locator/package.json
+++ b/uwaterloo-locator/package.json
@@ -17,7 +17,7 @@
     "react": "^18.3",
     "react-native": "0.76.1",
     "react-native-maps": "1.18.0",
-    "react-native-svg": "15.8.0"
+    "react-native-svg": "^15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -25,7 +25,7 @@
     "@react-native/metro-config": "^0.74.81",
     "@types/react": "~18.3.12",
     "globals": "^15.1.0",
-    "react-native-svg-transformer": "^1.3.0",
+    "react-native-svg-transformer": "^1.5.0",
     "typescript": "~5.3.3",
     "typescript-eslint": "^7.8.0"
   },
