--- a/uwaterloo-locator/app.json
+++ b/uwaterloo-locator/app.json
@@ -26,7 +26,10 @@
       },
       "permissions": [
         "android.permission.ACCESS_FINE_LOCATION",
-        "android.permission.ACCESS_BACKGROUND_LOCATION"
+        "android.permission.ACCESS_BACKGROUND_LOCATION",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.FOREGROUND_SERVICE",
+        "android.permission.FOREGROUND_SERVICE_LOCATION"
       ],
       "package": "com.anonymous.uwaterloolocator"
     },
@@ -41,6 +44,11 @@
           "isAndroidBackgroundLocationEnabled": "true"
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "eb81ccdf-98a0-4d9b-8abc-3006b2847923"
+      }
+    }
   }
 }
