--- a/uwaterloo-locator/package.json
+++ b/uwaterloo-locator/package.json
@@ -26,6 +26,7 @@
     "@react-native/metro-config": "^0.74.81",
     "@types/react": "~18.3.12",
     "globals": "^15.1.0",
+    "react-native-svg-transformer": "^1.5.0",
     "typescript": "~5.3.3",
     "typescript-eslint": "^7.8.0"
   },
