--- a/uwaterloo-locator/app.json
+++ b/uwaterloo-locator/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "uwaterloo-locator",
     "slug": "uwaterloo-locator",
+    "newArchEnabled": true,
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
