--- a/uwaterloo-locator/package.json
+++ b/uwaterloo-locator/package.json
@@ -11,19 +11,19 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.1",
     "eslint": "^9.1.1",
-    "expo": "^52.0.7",
-    "expo-status-bar": "~2.0.0",
+    "expo": "51",
+    "expo-status-bar": "~1.12.1",
     "prettier": "^3.2.5",
-    "react": "18.3.1",
-    "react-native": "0.76.2",
-    "react-native-maps": "1.18.0",
-    "react-native-svg": "15.8.0"
+    "react": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-maps": "1.14.0",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.1.1",
     "@react-native/metro-config": "^0.74.81",
-    "@types/react": "~18.3.12",
+    "@types/react": "~18.2.79",
     "globals": "^15.1.0",
     "react-native-svg-transformer": "^1.3.0",
     "typescript": "~5.3.3",
