--- a/uwaterloo-locator/package.json
+++ b/uwaterloo-locator/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.1",
     "eslint": "^9.1.1",
-    "expo": "^51.0.8",
+    "expo": "51",
     "expo-status-bar": "~1.12.1",
     "prettier": "^3.2.5",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.5",
     "react-native-maps": "1.14.0",
     "react-native-svg": "15.2.0"
   },
