--- a/uwaterloo-locator/package.json
+++ b/uwaterloo-locator/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^14.0.1",
     "eslint": "^9.1.1",
     "expo": "51",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "prettier": "^3.2.5",
     "react": "18.2.0",
@@ -23,7 +24,7 @@
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.1.1",
     "@react-native/metro-config": "^0.74.81",
-    "@types/react": "~18.3.12",
+    "@types/react": "~18.2.79",
     "globals": "^15.1.0",
     "react-native-svg-transformer": "^1.5.0",
     "typescript": "~5.3.3",
