--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "host": "127.0.0.1",
             "showLog": true,
             "trace": "verbose",
-            "preLaunchTask": "docker-compose-debug",
+            "preLaunchTask": "docker-compose-attach",
             "postDebugTask": "docker-compose-down",
             "substitutePath": [
                 {
