--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -48,6 +48,25 @@
                 "group": "debug-docker",
                 "close": true
             }
+        },
+        {
+            "label": "docker-compose-up-dev",
+            "type": "shell",
+            "command": "docker compose up --build washroom-service-dev",
+            "isBackground": true,
+            "problemMatcher": {
+                "pattern": {
+                    "regexp": "^.*building.*$",
+                    "file": 1,
+                    "location": 2,
+                    "message": 3
+                }
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "shared",
+                "group": "dev-docker"
+            }
         }
     ]
 }
